--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -18,3 +18,6 @@ Research website for the project "DNA damage-associated protein co-expression ne
 
 # Main Figures & additional analyses
 [Figure 3: Hub proteins in DOX-correlated modules are depleted for pQTLs. ](https://omar-johnson.github.io/DNA_damage_DOX/DOX_prot_pQTL_Fig3.html)
+
+[Figure 4: DOX-correlated hub proteins are enriched for loss-of-function intolerant proteins.  ](https://omar-johnson.github.io/DNA_damage_DOX/DOX_prot_Fig4_pLI.html)
+
