--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -11,7 +11,7 @@ Research website for the project "DNA damage-associated protein co-expression ne
 
 
 
-# Preprocessing and comparison of protein acqustion types 
+# Preprocessing and comparison of protein acquisition types 
 [Unwanted tehnical variation removal and differential abundance testing  ](https://omar-johnson.github.io/DNA_damage_DOX/DOX_prot_DAP_tests_ruv.html)
 
 
